Added a support for aliases file and corrected several bugs

--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -21,11 +21,11 @@ __BU_MODULE_INIT_STAT_DEBUG="false"
 
 if [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'false' ]; then
     # shellcheck disable=SC2034
-    __BU_MODULE_INIT_STAT_DEBUG_BASHX=""
+    __BU_MODULE_INIT_STAT_DEBUG_BASHX="";
 
 elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
     # shellcheck disable=SC2034
-    __BU_MODULE_INIT_STAT_DEBUG_BASHX="file"
+    __BU_MODULE_INIT_STAT_DEBUG_BASHX="file";
 
     # Add or remove any supported values inside these arrays.
 
