--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -60,11 +60,11 @@ fi
 
 # To remove these folders, please run the "rm -rf $folder" command with sudo if you're not logged as super-user.
 if [ "$EUID" -eq 0 ]; then
-    __BU_MAIN_PROJECT_TMP_DIR_PATH="$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH/$__BU_MAIN_PROJECT_NAME - ROOT"; # Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH/$__BU_MAIN_PROJECT_NAME - ROOT"
+    __BU_MAIN_PROJECT_TMP_DIR_PATH="$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH/$__BU_MAIN_PROJECT_NAME - ROOT"; # Default value : "$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH/$__BU_MAIN_PROJECT_NAME - ROOT"
 
     BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TMP_DIR_PATH' "$__BU_MAIN_PROJECT_TMP_DIR_PATH" 'Dirpath' "This global variable stores the path to the temporary folder" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 else
-    __BU_MAIN_PROJECT_TMP_DIR_PATH="$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH/$__BU_MAIN_PROJECT_NAME";        # Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH/$__BU_MAIN_PROJECT_NAME"
+    __BU_MAIN_PROJECT_TMP_DIR_PATH="$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH/$__BU_MAIN_PROJECT_NAME";        # Default value : "$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH/$__BU_MAIN_PROJECT_NAME"
 
     BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TMP_DIR_PATH' "$__BU_MAIN_PROJECT_TMP_DIR_PATH" 'Dirpath' "This global variable stores the path to the temporary folder (with super-user's privileges)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 fi
@@ -75,57 +75,21 @@ __BU_MAIN_PROJECT_FILE_PATH="$(GetProjectFilePath "$__BU_MAIN_PROJECT_FILE_NAME"
 
 # -------
 
-# Defining the project's log file's parent directory path.
-# __BU_MAIN_PROJECT_LOG_DIR_PARENT  --> Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PATH"
-# __BU_MAIN_PROJECT_LOG_DIR_NAME    --> Default --> "logs"
-# __BU_MAIN_PROJECT_LOG_DIR_PATH    --> Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PATH/$__BU_MAIN_PROJECT_LOG_DIR_NAME"
+# Defining the project's aliases file's informations.
+# __BU_MAIN_PROJECT_ALIAS_FILE_PARENT   --> Default value : "$__BU_MODULE_INIT__ROOT" (~/.Bash-utils)
+# __BU_MAIN_PROJECT_ALIAS_FILE_NAME     --> Default value : "Aliases.sh"
+# __BU_MAIN_PROJECT_ALIAS_FILE_PATH     --> Default value : "$__BU_MAIN_PROJECT_ALIAS_FILE_PARENT/$__BU_MAIN_PROJECT_ALIAS_FILE_NAME"
 
-__BU_MAIN_PROJECT_LOG_DIR_PARENT="$__BU_MAIN_PROJECT_TMP_DIR_PATH";
-__BU_MAIN_PROJECT_LOG_DIR_NAME="logs";
-__BU_MAIN_PROJECT_LOG_DIR_PATH="$__BU_MAIN_PROJECT_LOG_DIR_PARENT/$__BU_MAIN_PROJECT_LOG_DIR_NAME";
-
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_DIR_PARENT' "$__BU_MAIN_PROJECT_LOG_DIR_PARENT"   'Dirpath'	"This global variable stores the path to the parent directory of the project's log file's directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_DIR_NAME' "$__BU_MAIN_PROJECT_LOG_DIR_NAME"       'Dir'		"This global variable stores the name of the parent directory of the project's log file's directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_DIR_PATH' "$__BU_MAIN_PROJECT_LOG_DIR_PATH"       'Dirpath'	"This global variable stores the path to the parent directory of the project's log file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-
+__BU_MAIN_PROJECT_ALIAS_FILE_PARENT="$__BU_MODULE_INIT__ROOT";
+__BU_MAIN_PROJECT_ALIAS_FILE_NAME="Aliases.sh";
+__BU_MAIN_PROJECT_ALIAS_FILE_PATH="$__BU_MAIN_PROJECT_ALIAS_FILE_PARENT/$__BU_MAIN_PROJECT_ALIAS_FILE_NAME";
 
 # -------
 
-# Defining the project's log file's path.
-# __BU_MAIN_PROJECT_LOG_FILE_PARENT --> Default --> "$__BU_MAIN_PROJECT_LOG_DIR_PATH"
-# __BU_MAIN_PROJECT_LOG_FILE_NAME   --> Default --> "$__BU_MAIN_PROJECT_NAME.log"
-# __BU_MAIN_PROJECT_LOG_FILE_PATH   --> Default --> "$__BU_MAIN_PROJECT_LOG_FILE_PARENT/$__BU_MAIN_PROJECT_LOG_FILE_NAME"
-
-__BU_MAIN_PROJECT_LOG_FILE_PARENT="$__BU_MAIN_PROJECT_LOG_DIR_PATH";
-__BU_MAIN_PROJECT_LOG_FILE_NAME="$__BU_MAIN_PROJECT_NAME.log";
-__BU_MAIN_PROJECT_LOG_FILE_PATH="$__BU_MAIN_PROJECT_LOG_FILE_PARENT/$__BU_MAIN_PROJECT_LOG_FILE_NAME";
-
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_FILE_PARENT' "$__BU_MAIN_PROJECT_LOG_FILE_PARENT" 'Dirpath'	"This global variable stores the path to the project's log file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_FILE_NAME' "$__BU_MAIN_PROJECT_LOG_FILE_NAME"     'File'		"This global variable stores the name of the project's log file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_FILE_PATH' "$__BU_MAIN_PROJECT_LOG_FILE_PATH"     'FilePath'	"This global variable stores the path to the project's log path" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-
-
-# -------
-
-# Defining the project's "BU::Echo<...>()" functions debug output (to have a better view during a "bash - x" debug).
-# __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT --> Default --> "$__BU_MAIN_PROJECT_LOG_DIR_PATH"
-# __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME   --> Default --> "echo_output.log"
-# __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH   --> Default --> "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT/$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME"
-
-__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT="$__BU_MAIN_PROJECT_LOG_DIR_PATH";
-__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME="echo_output.log";
-__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH="$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT/$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME";
-
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT' "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT" 'Dirpath'	"This global variable stores the path to the echo debugging file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME' "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME"     'File'		"This global variable stores the name of the echo debugging file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH' "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH"     'Filepath'	"This global variable stores the path to the echo debugging file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-
-# -------
-
-# Defining the project's background color code storage file.
-# __BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT   --> Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PATH"
-# __BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME     --> Default --> "fgcolors.tmp"
-# __BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PATH     --> Default --> "$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME"
+# Defining the project's background color code storage file's informations.
+# __BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT   --> Default value : "$__BU_MAIN_PROJECT_TMP_DIR_PATH"
+# __BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME     --> Default value : "fgcolors.tmp"
+# __BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PATH     --> Default value : "$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME"
 
 __BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT="$__BU_MAIN_PROJECT_TMP_DIR_PATH";
 __BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME="fgcolors.tmp";
@@ -138,10 +102,10 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE
 
 # -------
 
-# Defining the project's text color code storage file.
-# __BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PARENT --> Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PATH"
-# __BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME   --> Default --> "fgcolors.tmp"
-# __BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PATH   --> Default --> "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME"
+# Defining the project's text color code storage file's informations.
+# __BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PARENT --> Default value : "$__BU_MAIN_PROJECT_TMP_DIR_PATH"
+# __BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME   --> Default value : "fgcolors.tmp"
+# __BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PATH   --> Default value : "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME"
 
 __BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PARENT="$__BU_MAIN_PROJECT_TMP_DIR_PATH";
 __BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME="fgcolors.tmp";
@@ -151,9 +115,59 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FI
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME' "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME"       'File'		"This global variable stores the name of the Decho color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PATH' "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PATH"       'Filepath'	"This global variable stores the path to the Decho color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
 
+
 # -------
 
-# Defining the project's translator script's informations.
+# Defining the project's "BU::Echo<...>()" functions debug output (to have a better view during a "bash - x" debug).
+# __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT --> Default value : "$__BU_MAIN_PROJECT_LOG_DIR_PATH"
+# __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME   --> Default value : "echo_output.log"
+# __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH   --> Default value : "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT/$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME"
+
+__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT="$__BU_MAIN_PROJECT_LOG_DIR_PATH";
+__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME="echo_output.log";
+__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH="$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT/$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME";
+
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT' "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT" 'Dirpath'	"This global variable stores the path to the echo debugging file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME' "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME"     'File'		"This global variable stores the name of the echo debugging file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH' "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH"     'Filepath'	"This global variable stores the path to the echo debugging file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+
+# -------
+
+# Defining the project's log file's parent directory path.
+# __BU_MAIN_PROJECT_LOG_DIR_PARENT  --> Default value : "$__BU_MAIN_PROJECT_TMP_DIR_PATH"
+# __BU_MAIN_PROJECT_LOG_DIR_NAME    --> Default value : "logs"
+# __BU_MAIN_PROJECT_LOG_DIR_PATH    --> Default value : "$__BU_MAIN_PROJECT_TMP_DIR_PATH/$__BU_MAIN_PROJECT_LOG_DIR_NAME"
+
+__BU_MAIN_PROJECT_LOG_DIR_PARENT="$__BU_MAIN_PROJECT_TMP_DIR_PATH";
+__BU_MAIN_PROJECT_LOG_DIR_NAME="logs";
+__BU_MAIN_PROJECT_LOG_DIR_PATH="$__BU_MAIN_PROJECT_LOG_DIR_PARENT/$__BU_MAIN_PROJECT_LOG_DIR_NAME";
+
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_DIR_PARENT' "$__BU_MAIN_PROJECT_LOG_DIR_PARENT"   'Dirpath'	"This global variable stores the path to the parent directory of the project's log file's directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_DIR_NAME' "$__BU_MAIN_PROJECT_LOG_DIR_NAME"       'Dir'		"This global variable stores the name of the parent directory of the project's log file's directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_DIR_PATH' "$__BU_MAIN_PROJECT_LOG_DIR_PATH"       'Dirpath'	"This global variable stores the path to the parent directory of the project's log file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+
+# -------
+
+# Defining the project's log file's path.
+# __BU_MAIN_PROJECT_LOG_FILE_PARENT --> Default value : "$__BU_MAIN_PROJECT_LOG_DIR_PATH"
+# __BU_MAIN_PROJECT_LOG_FILE_NAME   --> Default value : "$__BU_MAIN_PROJECT_NAME.log"
+# __BU_MAIN_PROJECT_LOG_FILE_PATH   --> Default value : "$__BU_MAIN_PROJECT_LOG_FILE_PARENT/$__BU_MAIN_PROJECT_LOG_FILE_NAME"
+
+__BU_MAIN_PROJECT_LOG_FILE_PARENT="$__BU_MAIN_PROJECT_LOG_DIR_PATH";
+__BU_MAIN_PROJECT_LOG_FILE_NAME="$__BU_MAIN_PROJECT_NAME.log";
+__BU_MAIN_PROJECT_LOG_FILE_PATH="$__BU_MAIN_PROJECT_LOG_FILE_PARENT/$__BU_MAIN_PROJECT_LOG_FILE_NAME";
+
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_FILE_PARENT' "$__BU_MAIN_PROJECT_LOG_FILE_PARENT" 'Dirpath'	"This global variable stores the path to the project's log file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_FILE_NAME' "$__BU_MAIN_PROJECT_LOG_FILE_NAME"     'File'		"This global variable stores the name of the project's log file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_FILE_PATH' "$__BU_MAIN_PROJECT_LOG_FILE_PATH"     'FilePath'	"This global variable stores the path to the project's log path" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+
+# -------
+
+# Defining the project's translations script's informations.
+# __BU_MAIN_PROJECT_LANG_CSV_PARSER_SCRIPT_PARENT   --> Default value : "$__BU_MAIN_MODULE_LANG_DIR_PATH"
+# __BU_MAIN_PROJECT_LANG_CSV_PARSER_SCRIPT_NAME     --> Default value : "SetModuleLang.pl"
+# __BU_MAIN_PROJECT_LANG_CSV_PARSER_SCRIPT_PATH     --> Default value : "$__BU_MAIN_PROJECT_LANG_CSV_PARSER_SCRIPT_PARENT/$__BU_MAIN_PROJECT_LANG_CSV_PARSER_SCRIPT_NAME"
+
 __BU_MAIN_PROJECT_LANG_CSV_PARSER_SCRIPT_PARENT="$__BU_MAIN_MODULE_LANG_DIR_PATH";
 __BU_MAIN_PROJECT_LANG_CSV_PARSER_SCRIPT_NAME="SetModuleLang.pl"
 __BU_MAIN_PROJECT_LANG_CSV_PARSER_SCRIPT_PATH="$__BU_MAIN_PROJECT_LANG_CSV_PARSER_SCRIPT_PARENT/$__BU_MAIN_PROJECT_LANG_CSV_PARSER_SCRIPT_NAME";
