--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -32,16 +32,19 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_NAME' "$__BU_MAIN_
 
 function GetProjectFilePath()
 {
+    #**** Variables ****
     local v_cut="${__BU_MAIN_PROJECT_FILE_NAME##*./}";
+
     local find_path;
-        find_path="$(BU::ModuleInit::FindPath "$(cd "$(printf "%s" "$__BU_MAIN_PROJECT_FILE_PATH")" ||
-        { 
+        find_path="$(BU::ModuleInit::FindPath "$(cd "$(printf "%s" "$(BU::Main::Directories::GetParentDirectoryPath "$__BU_MAIN_PROJECT_FILE_PATH")")" || \
+        {
             echo >&2; echo "IN « ${BASH_SOURCE[0]} », FUNCTION « ${FUNCNAME[0]} », LINE « $LINENO » --> ERROR : UNABLE TO GET THE " >&2; echo >&2; exit 1;
         }; pwd)" "$v_cut")";
 
+    #**** Code ****
     echo "$find_path";
 
-	exit 1;
+	return 0;
 }
 
 __BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME="tmp";
@@ -70,7 +73,7 @@ else
 fi
 
 # Project's file path.
-__BU_MAIN_PROJECT_FILE_PATH="$(GetProjectFilePath "$__BU_MAIN_PROJECT_FILE_NAME")"; echo "$__BU_MAIN_PROJECT_FILE_PATH"
+__BU_MAIN_PROJECT_FILE_PATH="$(GetProjectFilePath "$__BU_MAIN_PROJECT_FILE_NAME")"; echo "$__BU_MAIN_PROJECT_FILE_PATH";
 
 
 # -------
