--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -44,69 +44,73 @@ elif [ -f "$__BU_MODULES_UTILS_LIB_ROOT_DIR_ROOT_FILE_PATH" ]; then
 # The possible absence of this file is managed below.
 fi
 
-# Checking if the "Bash-utils-root-val.path" file exists AND if this file contains a string (the wanted string here is the library's root folder path).
-if [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ -s "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
-	__BU_MAIN_ROOT_DIR_PATH="$(cat "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH")";
+# If the library's root directory doesn't exists in at least one of these paths, then the value stored in the "Bash-utils-root-val.path" is used as the path of this root directory.
+if [ ! -d "/usr/local/lib/Bash-utils/" ] || [ ! -d "$__BU_MODULE_INIT__ROOT/Bash-utils" ]; then
 
-	BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_ROOT_DIR_PATH' "$__BU_MAIN_ROOT_DIR_PATH" 'Dirpath' "This global variable stores the Bash Utils library's root path, which is written in the « $__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH » file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
+    # Checking if the "Bash-utils-root-val.path" file exists AND if this file contains a string (the wanted string here is the library's root folder path).
+    if [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ -s "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
+        __BU_MAIN_ROOT_DIR_PATH="$(cat "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH")";
 
-	# Checking if the library's root folder path written in this file is valid.
-	if [ ! -d "$__BU_MAIN_ROOT_DIR_PATH" ]; then
-		echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $LINENO --> ERROR !" >&2; echo >&2
+        BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_ROOT_DIR_PATH' "$__BU_MAIN_ROOT_DIR_PATH" 'Dirpath' "This global variable stores the Bash Utils library's root path, which is written in the « $__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH » file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
 
-		echo "The Bash Utils library's root folder's path written in the « $__BU_MODULES_UTILS_LIB_FILE_PATH » file was not found in your hard drive." >&2; echo >&2;
-		echo "The currently written path is « $__BU_MAIN_ROOT_DIR_PATH »" >&2; echo >&2
+        # Checking if the library's root folder path written in this file is valid.
+        if [ ! -d "$__BU_MAIN_ROOT_DIR_PATH" ]; then
+            echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $LINENO --> ERROR !" >&2; echo >&2;
 
-		echo "Please check the path recorded in this file for typos if you typed it by yourself, or verify where you've stored this root folder." >&2; echo >&2;
+            echo "The Bash Utils library's root folder's path written in the « $__BU_MODULES_UTILS_LIB_FILE_PATH » file was not found in your hard drive." >&2; echo >&2;
+            echo "The currently written path is « $__BU_MAIN_ROOT_DIR_PATH »" >&2; echo >&2;
 
-		BU::ModuleInit::MsgAbort;
+            echo "Please check the path recorded in this file for typos if you typed it by yourself, or verify where you've stored this root folder." >&2; echo >&2;
 
-		BU::ModuleInit::AskPrintLog;
+            BU::ModuleInit::MsgAbort;
 
-		exit 1;
-	fi
+            BU::ModuleInit::AskPrintLog;
 
-# Checking if the "Bash-utils-root-val.path" exists AND if this file is empty (no library's path specified).
-elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -s "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
-	echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $LINENO --> WARNING !" >&2; echo >&2
+            exit 1;
+        fi
 
-	echo "The Bash Utils's root folder's path storage file « $__BU_MAIN_ROOT_DIR_PATH » exists, but is empty." >&2; echo >&2;
-	echo "Please write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2;
+    # Checking if the "Bash-utils-root-val.path" exists AND if this file is empty (no library's path specified).
+    elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -s "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
+        echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $LINENO --> WARNING !" >&2; echo >&2;
 
-	BU::ModuleInit::MsgAbort;
+        echo "The Bash Utils's root folder's path storage file « $__BU_MAIN_ROOT_DIR_PATH » exists, but is empty." >&2; echo >&2;
+        echo "Please write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2;
 
-	BU::ModuleInit::AskPrintLog;
+        BU::ModuleInit::MsgAbort;
 
-	exit 1;
+        BU::ModuleInit::AskPrintLog;
 
-# Checking if the current user cannot read the "Bash-utils-root-val.path" (file owned by the "root" user).
-elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -r "$__BU_MODULES_UTILS_LIB_ROOT_DIR_FILE_PATH" ]; then
-    echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $LINENO --> ERROR !" >&2; echo >&2;
+        exit 1;
 
-    echo "You don't have the right to read the Bash Utils's root folder's path storage file « $__BU_MAIN_ROOT_DIR_PATH »" >&2;
-    echo "It means that you've created this file with the super-user privileges, by hand or with the installation script (in this case, something may have be wrong)" >&2; echo >&2;
+    # Checking if the current user cannot read the "Bash-utils-root-val.path" (file owned by the "root" user).
+    elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -r "$__BU_MODULES_UTILS_LIB_ROOT_DIR_FILE_PATH" ]; then
+        echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $LINENO --> ERROR !" >&2; echo >&2;
 
-    echo "Please execute this script as root user, or change the ownership of the « $__BU_MAIN_ROOT_DIR_PATH » file, or create a new file, and rename the file to find in the « $__BU_MODULE_INIT__INITIALIZER_PATH » file";
-    echo "If you opt for the last solution, please find the line containing the string « __BU_MODULES_UTILS_LIB_ROOT_DIR_FILE_NAME= » in the « DEFINING GLOBAL VARIABLES » subsection"; echo >&2;
+        echo "You don't have the right to read the Bash Utils's root folder's path storage file « $__BU_MAIN_ROOT_DIR_PATH »" >&2;
+        echo "It means that you've created this file with the super-user privileges, by hand or with the installation script (in this case, something may have be wrong)" >&2; echo >&2;
 
-    BU::ModuleInit::MsgAbort;
+        echo "Please execute this script as root user, or change the ownership of the « $__BU_MAIN_ROOT_DIR_PATH » file, or create a new file, and rename the file to find in the « $__BU_MODULE_INIT__INITIALIZER_PATH » file";
+        echo "If you opt for the last solution, please find the line containing the string « __BU_MODULES_UTILS_LIB_ROOT_DIR_FILE_NAME= » in the « DEFINING GLOBAL VARIABLES » subsection"; echo >&2;
 
-	BU::ModuleInit::AskPrintLog;
+        BU::ModuleInit::MsgAbort;
 
-    exit 1;
+        BU::ModuleInit::AskPrintLog;
 
-# Handling the absence of the "Bash-utils-root-val.path" file.
-elif [ ! -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
-	echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $LINENO --> ERROR !" >&2; echo >&2;
+        exit 1;
 
-	echo "The Bash Utils's root folder's path storage file « $__BU_MAIN_ROOT_DIR_PATH » doesn't exists" >&2; echo >&2;
-	echo "Please create this file and write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2;
+    # Handling the absence of the "Bash-utils-root-val.path" file.
+    elif [ ! -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
+        echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $LINENO --> ERROR !" >&2; echo >&2;
 
-	BU::ModuleInit::MsgAbort;
+        echo "The Bash Utils's root folder's path storage file « $__BU_MAIN_ROOT_DIR_PATH » doesn't exists" >&2; echo >&2;
+        echo "Please create this file and write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2;
 
-	BU::ModuleInit::AskPrintLog;
+        BU::ModuleInit::MsgAbort;
 
-	exit 1;
+        BU::ModuleInit::AskPrintLog;
+
+        exit 1;
+    fi
 fi
 
 # -----------------------------------------------
