Corrected the 'necessary numeric argument' bug, due to the inclusion of the Exit.conf file after the Text.conf file, which calls functions that require these exit codes names

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -292,10 +292,14 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONFIG_FILES_PATH_A
 
 __BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY=();
 
-__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY+=("$__BU_MAIN_MODULE_CONF_FILE_INIT_PATH" \
+# Please source these files in this order of priority :
+#   - $__BU_MAIN_MODULE_CONF_FILE_EXIT_PATH     ("Exit.conf")
+#   - $__BU_MAIN_MODULE_CONF_FILE_STATUS_PATH   ("Status.conf")
+#   - $__BU_MAIN_MODULE_CONF_FILE_INIT_PATH     ("Project.conf")
+__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY+=("$__BU_MAIN_MODULE_CONF_FILE_EXIT_PATH" \
     "$__BU_MAIN_MODULE_CONF_FILE_STATUS_PATH" \
+    "$__BU_MAIN_MODULE_CONF_FILE_INIT_PATH" \
     "$__BU_MAIN_MODULE_CONF_FILE_COLORS_PATH" \
-    "$__BU_MAIN_MODULE_CONF_FILE_EXIT_PATH" \
     "$__BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH" \
     "$__BU_MAIN_MODULE_CONF_FILE_TEXT_PATH" \
     "$__BU_MAIN_MODULE_CONF_FILE_TIME_PATH");
