--- a/install/.Bash-utils/config/modules/main/Exit.conf
+++ b/install/.Bash-utils/config/modules/main/Exit.conf
@@ -79,6 +79,20 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_IS_DIR' "$__BU_MAIN_E
 	"$(BU::Main::ModConfig::PrintReturnValue 'the target is a directory')" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
+# Invalid argument
+__BU_MAIN_EXIT_INVALID_ARGUMENT="22";
+
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_INVALID_ARGUMENT' "$__BU_MAIN_EXIT_INVALID_ARGUMENT" 'Int' \
+	"$(BU::Main::ModConfig::PrintReturnValue "bad argument provided")" \
+	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+
+# File too large
+__BU_MAIN_EXIT_FILE_TOO_LARGE="27";
+
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_FILE_TOO_LARGE' "$__BU_MAIN_EXIT_FILE_TOO_LARGE" 'Int' \
+	"$(BU::Main::ModConfig::PrintReturnValue "file is too large")" \
+	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+
 # Not space left on the hard drive.
 __BU_MAIN_EXIT_NO_SPACE_LEFT='28';
 
