A problem with loops is being fixed: the program execution did not stop when an error occurred during the execution of a subprogram

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -26,9 +26,10 @@
 # Bash Utils root directory.
 
 # If the library's root directory doesn't exists in at least one of these paths, then the value stored in the "Bash-utils-root-val.path" is used as the path of this root directory.
-if [ ! -d "/usr/local/lib/Bash-utils/" ] || [ ! -d "$__BU_MODULE_INIT__ROOT/Bash-utils" ]; then
-# For a better environment integration, it is highly advised to store the path in a file
-# in the configurations directory, and to call the "cat" command to display its value.
+if [ ! -d "/usr/local/lib/Bash-utils" ] && [ ! -d "$__BU_MODULE_INIT__ROOT/Bash-utils" ]; then
+
+    # For a better environment integration, it is highly advised to store the path in a file
+    # in the configurations directory, and to call the "cat" command to display its value.
 
     if [ -f "$__BU_MODULE_INIT__LIB_ROOT_DIR__FILE_PATH" ]; then
         __BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH="$__BU_MODULE_INIT__LIB_ROOT_DIR__FILE_PATH";
