--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -23,11 +23,18 @@
 
 ## BASH-UTILS DIRECTORIES PATHS
 
-# Bash Utils root directory.
+# Bash Utils root directory path checking.
 
-# If the library's root directory doesn't exists in at least one of these paths, then the value stored in the "Bash-utils-root-val.path" is used as the path of this root directory.
-if [ ! -d "/usr/local/lib/Bash-utils" ] && [ ! -d "$__BU_MODULE_INIT__ROOT/Bash-utils" ]; then
+# If the Bash Utils root directory is located in the directory where the main developer is used to develop this framework, on Ubuntu.
+if [ -d "/usr/local/lib/Bash-utils" ]; then
+    __BU_MAIN_ROOT_DIR_PATH='/usr/local/lib/Bash-utils';
 
+# If the Bash Utils root directory is installed in the hidden directory, normally located in the user's home directory.
+elif [ -d "$__BU_MODULE_INIT__ROOT/Bash-utils" ]; then
+    __BU_MAIN_ROOT_DIR_PATH="$__BU_MODULE_INIT__ROOT/Bash-utils";
+
+# Else, if the library's root directory doesn't exists in at least one of the above paths, then the value stored in the "Bash-utils-root-val.path" is used as the path of this root directory.
+else
     # For a better environment integration, it is highly advised to store the path in a file
     # in the configurations directory, and to call the "cat" command to display its value.
 
