--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -303,6 +303,8 @@ __BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY=();
 #   - $__BU_MAIN_MODULE_CONF_FILE_EXIT_PATH     ("Exit.conf")
 #   - $__BU_MAIN_MODULE_CONF_FILE_STATUS_PATH   ("Status.conf")
 #   - $__BU_MAIN_MODULE_CONF_FILE_INIT_PATH     ("Project.conf")
+
+#   - Then the rest of the configuration files.
 __BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY+=("$__BU_MAIN_MODULE_CONF_FILE_EXIT_PATH" \
     "$__BU_MAIN_MODULE_CONF_FILE_STATUS_PATH" \
     "$__BU_MAIN_MODULE_CONF_FILE_INIT_PATH" \
