--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -11,9 +11,13 @@
 
 #### DEFINING THE NEEDED RESOURCES
 
-# Feel free to define any needed resources (functions, etc...) here.
+## FUNCTIONS
 
-
+# Writing the command substitution text for the file systems description strings.
+function BU::Main::ModConfig::Filesystem::PrintFSLengthDescription()
+{
+    printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__MAX_LENGHT_STR_MSG" "$?";
+}
 
 # -----------------------------------------------
 
@@ -21,7 +25,7 @@
 
 #### PROCESSING FILE SYSTEM'S INFORMATIONS
 
-# Getting the filesystem's name with the "df" command, and parsing the output list according to the operating system's command version.
+# Getting the file system's name with the "df" command, and parsing the output list according to the operating system's command version.
 BU::IsOSHaiku && __BU_MAIN_FS_NAME="$(df "$0" | awk 'FNR == 4 {print $3}')";
 BU::IsOSLinux && __BU_MAIN_FS_NAME="$(df -Th "$0" | awk 'FNR == 2 {print $2}')";
 
@@ -32,7 +36,7 @@ if [ "${__BU_MAIN_FS_NAME,,}" = 'apfs' ]; then
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        "This global variable stores the maximum length in bytes of a file name. This length is associated with the Apple's APFS file system" \
+        "$(BU::Main::ModConfig::Filesystem::PrintFSLengthDescription "Apple's APFS")" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -44,7 +48,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'btrfs' ]; then
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        'This global variable stores the maximum length in bytes of a file name. This length is associated with the Btrfs file system' \
+        "$(BU::Main::ModConfig::Filesystem::PrintFSLengthDescription 'Btrfs')" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -56,7 +60,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'ext2' ]; then
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        'This global variable stores the maximum length in bytes of a file name. This length is associated with the EXT2 file system' \
+        "$(BU::Main::ModConfig::Filesystem::PrintFSLengthDescription 'EXT2')" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -68,7 +72,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'ext3' ]; then
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        'This global variable stores the maximum length in bytes of a file name. This length is associated with the EXT3 file system' \
+        "$(BU::Main::ModConfig::Filesystem::PrintFSLengthDescription 'EXT3')" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -80,7 +84,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'ext4' ]; then
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        'This global variable stores the maximum length in bytes of a file name. This length is associated with the EXT4 file system' \
+        "$(BU::Main::ModConfig::Filesystem::PrintFSLengthDescription 'EXT4')" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -92,7 +96,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'jfs' ]; then
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        'This global variable stores the maximum length in bytes of a file name. This length is associated with the JFS file system' \
+        "$(BU::Main::ModConfig::Filesystem::PrintFSLengthDescription 'JFS')" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -104,7 +108,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'xfs' ]; then
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        'This global variable stores the maximum length in bytes of a file name. This length is associated with the XFS file system' \
+        "$(BU::Main::ModConfig::Filesystem::PrintFSLengthDescription 'XFS')" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -116,18 +120,19 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'zfs' ]; then
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        'This global variable stores the maximum length in bytes of a file name. This length is associated with the ZFS file system' \
+        "$(BU::Main::ModConfig::Filesystem::PrintFSLengthDescription 'ZFS')" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
 else
-    BU::Main::Errors::HandleSmallErrors 'W' "Unsupported filesystem (found $(BU::DechoHighlight "$__BU_MAIN_FS_NAME"))\n\nGeneration of basic informations, but several functionalities of this framework may be prone to bugs" 'R';
+    # shellcheck disable=SC2059
+    BU::Main::Errors::HandleSmallErrors 'W' "$(printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__UNSUPPORTED_FILESYSTEM" "$(BU::DechoHighlight "$__BU_MAIN_FS_NAME")")" 'R';
 
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        'This global variable stores the maximum length in bytes of a file name. This length is not associated with any file system, but rather according to general specification' \
+        "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__SET_GENERAL_SPECIFICATION__FILENAME_LENGTH" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 fi
